# NovaPhy

.claude/: settings.local.json
.github/workflows/: ci.yml
demos/: demo_pyramid.py  demo_stack.py
include/novaphy/core/: articulation.h  joint.h
include/novaphy/dynamics/: articulated_solver.h  featherstone.h  free_body_solver.h
python/bindings/: CMakeLists.txt  bind_dynamics.cpp  bind_main.cpp  bind_sim.cpp
python/novaphy/: __init__.py
src/: CMakeLists.txt
src/collision/: narrowphase.cpp
src/core/: joint.cpp
src/dynamics/: articulated_solver.cpp  featherstone.cpp
src/ipc/: ipc_world.cpp
tests/python/: test_articulated_sim.py  test_collision.py  test_free_body_sim.py
